--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,22 @@
 .home {
+  button {
+    display: flex;
+    justify-content: center;
+  
+
+    .custom-btn(@eastern-blue, 250px, white);
+  }
+
+  .mainHeader {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-bottom: 2px dashed @navigation-border;
+
+    .headerContent {
+      padding-top: 30px;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
@@ -6,8 +24,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -53,9 +69,12 @@
     display: flex;
     justify-content: space-between;
 
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
     }
   }
-}// home
+}
+// home
