--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,16 @@
 // Follow the order in the readme
+
+//Variables and mixind
+@import "variables";
+@import "mixins";
+
+//General Styles
+@import "reset";
+@import "global";
+
+//Components
+@import "navigation";
+@import "footer";
+@import "home-page";
+
+// no styles below!
