--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  
 
 
   h1 {
@@ -20,5 +21,10 @@
     font-size: 1.8rem;
     font-color: @shark;
     text-decoration: none;
+  }
+
+  @media @mobile{
+
+    flex-direction: column;
   }
 }
